# datakit-flutter

./: .gitignore  .pubignore  CHANGELOG.md  InterfaceDoc.md  LICENSE  README.md  build.yaml  how-to-build-windows.txt  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/androidTest/kotlin/com/ft/sdk/flutter/tests/: ConfigTest.kt
android/src/debug/java/com/cloudcare/ft/mobile/sdk/tracker/flutter/: FTConfigCheck.java
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/cloudcare/ft/mobile/sdk/agent/: FTMobileAgentFlutter.kt
android/src/main/kotlin/com/cloudcare/ft/mobile/sdk/tracker/flutter/: FTConfigCheck.java  FTConfigCheck.kt  FTMobileAgentFlutter.kt
android/src/main/kotlin/com/ft/sdk/: InnerClassProxy.kt
android/src/main/kotlin/com/ft/sdk/flutter/: FTConfigCheck.kt  FTMobileAgentFlutter.kt
android/src/main/kotlin/com/ft/sdk/flutter/sessionreplay/: FlutterSessionReplaySampleStateBridge.kt
android/src/main/kotlin/com/ft/sdk/sessionreplay/: FTSessionReplayFlutterBridgeConfig.kt
example/: .gitignore  README.md  pubspec.yaml
example/android/: build.gradle  gradle.properties  settings.gradle
example/android/app/: build.gradle  proguard-rules.pro
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/cloudcare/ft/mobile/sdk/agent_example/: CustomApplication.kt  MainActivity.kt
example/android/app/src/main/kotlin/com/ft/sdk/flutter/agent_example/: CustomApplication.kt  MainActivity.kt
example/android/app/src/main/res/xml/: network_security_config.xml
example/android/app/src/profile/: AndroidManifest.xml
example/android/gradle/wrapper/: gradle-wrapper.properties
example/ios/: JenkinsTestingBash.sh  Podfile  TodayDemoExtension.entitlements
example/ios/FTPluginTests/: FTPluginTest.swift  FTPluginTests-Bridging-Header.h  FTSessionReplayBridgeTests.swift  FTTestUtils.swift  TestDebug.xcconfig  TestUtils.h  TestUtils.m
example/ios/FTTest/: FTTest.podspec  ft_mobile_agent_flutter.podspec
example/ios/FTTest/Classes/: FTTestKey.swift  FTTypeValidator.swift
example/ios/Runner/: AppDelegate.swift  Info.plist  Runner.entitlements
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/Runner.xcodeproj/xcshareddata/xcschemes/: FTPluginTests.xcscheme  Runner.xcscheme
example/ios/TodayDemo/: TodayDemo.swift  WidgetNetwork.swift
example/lib/: ft_custom_http_override.dart  ft_get_view_name.dart  ft_route_observer.dart  ft_tracing_custom_dio.dart  ft_tracing_custom_http.dart  ft_tracing_dio.dart  ft_tracing_http.dart  image_page.dart  logging.dart  logging_page.dart  logging_screen.dart  main.dart  rum.dart  rum_page.dart  rum_screen.dart  session_replay_page.dart  tracing.dart  tracing_page.dart  tracing_screen.dart  view_without_route_name.dart  view_without_route_name_page.dart  webview_page.dart  webview_screen.dart
example/test/: widget_test.dart
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: CMakeLists.txt  Runner.rc  main.cpp
ios/: ft_mobile_agent_flutter.podspec
ios/Classes/: FTFlutterLogBridge.h  FTFlutterLogBridge.m  FTMobileAgentFlutter.h  FTMobileAgentFlutter.m  FTTypeValidator.swift  SwiftAgentPlugin.swift
lib/: const.dart  ft_http_client.dart  ft_http_override.dart  ft_http_override_config.dart  ft_logger.dart  ft_mobile_agent.dart  ft_mobile_agent_flutter.dart  ft_route_observer.dart  ft_rum.dart  ft_rum_long_task_observer.dart  ft_session_replay.dart  ft_tracing.dart  version.dart
lib/internal/: ft_sdk_config.dart
lib/src/: ft_session_replay.dart  session_replay_internal.dart  session_replay_platform.dart  sr_data_models.dart  sr_data_models.g.dart  widgets.dart
lib/src/capture/: recorder.dart
lib/src/capture/element_recorders/: editable_text_recorder.dart  image_recorder.dart  privacy_recorder.dart  recording_extensions.dart  text_recorder.dart
lib/src/processor/: diff.dart  processor.dart  processor_worker.dart
test/: agent_test.dart  channel_test.dart  processor_worker_test.dart  sdk_test.dart  test.dart
windows/: .gitignore  CMakeLists.txt  data_converter.cpp  data_converter.h  ft_mobile_agent_flutter_plugin.cpp  ft_mobile_agent_flutter_plugin.h  ft_sdk_adapter.cpp  ft_sdk_adapter.h  method_channel_handler.cpp  method_channel_handler.h
windows/include/ft_mobile_agent_flutter/: f_t_mobile_agent_flutter.h  ft_mobile_agent_flutter_plugin.h
